# Nearchat

./: .env  .gitignore  README.md  bun.lockb  docker-compose.yml  init.sql  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  publish.yml  release.yml
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/entities/: comments.rs  followers.rs  mod.rs  posts.rs  prelude.rs  users.rs
src/components/auth/: CreateAccountForm.jsx  LoginAccountForm.jsx  SignIn.jsx
src/explore/: App.jsx
src/home/account/: App.jsx
src/home/body/: App.jsx
src/overlay/: overlay.jsx
src/overlay/create/: App.jsx
src/overlay/notifications/: App.jsx
src/overlay/search/: App.jsx
src/profile/: App.jsx
